--- a/css/style.css
+++ b/css/style.css
@@ -1,122 +1,143 @@
 body {padding: 0;
     margin: 0;
-    box-sizing: border-box;  
-background-image: url(../Assets/wallpaperflare.com_wallpaper.jpg);
-}
-header {
-display:grid;
-grid-template-columns: 1fr 1fr 1fr;
-grid-template-rows: 1fr;
-background: linear-gradient(to left, #be8a5e, #8B5D33); 
-border-top: solid 2px rgb(124, 103, 103);
-border-right: solid 2px rgb(124, 103, 103);
-border-left: solid 2px rgb(124, 103, 103);;
-background-image: url(../Assets/sunrise-ocean-morning-sea.jpg);
-background-size: cover;
+    box-sizing: border-box;
+        background-image: linear-gradient(180deg, rgb(255, 136, 0), rgb(212, 212, 179));
+    background-size: cover;
 }
 
-h1 { 
-display: inline;
-color: #ffedbc;
-font-size: 40px;
-position:relative; 
-bottom:15px;
-}
+.section1 {display: grid;
+    grid-template-areas: 
+    "imagen1 slogan ul1";
+    grid-template-columns:600px 600px 600px;
+    grid-template-rows:450px;
+    border: 2px solid #ffedbc;}
+
 .imagen1 {
-justify-self: left;
+grid-area: imagen1;
+justify-self: center;
 align-self: center;
-width: 400px;
-margin-top: 20px;
-margin-bottom: 20px;
-margin-left: 20px;
-box-sizing: content-box;
+width: 580px;
 border: 2px solid #ffedbc;
-grid-column: 1;
 }
+.slogan {
+    grid-area: slogan;
+    align-self: center;
+    justify-self: center;
+    background-color: #8B5D33;
+    color: #f9bc60;
+    font-size: 35px;
+    text-align: center;
+}
+
+.ul1 {
+grid-area: ul1;
+justify-self:end ;
+padding: 1px 1px 1px 1px;
+}
+
 .link1 {
 margin: 1px 3px;
 font-size: 30px;
- color: #f9bc60; 
- background-color: #3f3e3d;
+color: #f9bc60; 
+background-color: #3f3e3d;
 }
+
 .link1:hover {background-color: #0a0a0a;}
 
-ul {
-justify-self:end ;
-padding: 1px 1px 1px 1px;
-grid-column: 3;
-grid-row: 1;   
-}
 .boton1 {
-    width: 300px;
-    height: 100px;
+    margin-bottom: 275px;
+    margin-left: 430px;
+    width: 150px;
+    height: 50px;
     background-color: #ffedbc;
-    font-size: 30px;
-    align-self: center;
+    font-size: 15px;
+    align-self: end;
     justify-self: center;
-    grid column:2;}
-
-.section1 {
-    background: linear-gradient(to left, #be8a5e, #8B5D33 );
+    grid-column: 3;
+    grid-row: 1;
 }
 .section2{
-display: flex; 
-justify-content: center ;
+    display: grid;
+    grid-template-areas: 
+    "section2 section2 section2";
+    grid-template-columns: 600px 600px 600px;
+grid-template-rows: 600px;
 }
+.section2v {
+    grid-area: section2;
+    justify-self: center;
+    align-self: center;
+}
+.section3 {display: grid;
+grid-template-areas: "imagensection31 imagensection32 imagensection33";
+grid-template-columns: 600px 600px 600px;
+grid-template-rows: 1000px;
+justify-content: space-evenly;
+align-content: center;
+}
+
+.imagensection31 {
+    grid-area: imagensection31;
+    justify-self:center;
+    align-self: center;
+}
+.imagensection32{
+    grid-area: imagensection32;
+    justify-self:center;
+    align-self: center;
+}
+.imagensection33{
+    grid-area: imagensection33;
+    justify-self:center;
+    align-self: center;
+}
+
 h2 {
-display:inline;
-position: relative; 
 bottom: 20px; 
 font-size: 65px;
 color: #ffedbc;
 }
-#boton1{ 
-display: inline;
-margin-left: 850px;
-position:relative; 
-bottom: 50px;
-font-size: 20px;
-}
-.section3 {
- display:flex; 
-position: relative; 
-align-items: center;
-border: double 5px #f9bc60;
-}
-.imagensection3{
-display: flex;
-flex-direction: row;
-align-items: center;
-margin-left: 15px;
-margin-right: 15px;
-border: 1px;
-}
-.section4 {
-display:flex; 
-margin: 5px 5px;
-justify-content: center;
-border-top: solid 1px #f9bc60;
-border-left: double 5px #f9bc60;
-border-bottom: double 5px #f9bc60;
-border-right: double 5px #f9bc60;
-}
-.link2 {
-display: flex; 
-position: relative; 
-margin-left: 5px;
-margin-right: 5px;
-font-size:  25px; 
-font-weight: 800; 
+
+.section4 {display: grid;
+grid-template-areas: "link1 link2 link3 link4";
+grid-template-columns: 500px;
+grid-template-rows: 500px;
 color: #f9bc60; 
-border: solid 2px #f9bc60;
-background-color: #3f3e3d;
+background-color: #3f3e3d
 }
-.link2:hover {
-    background-color: #0a0a0a;
+
+.link21 {grid-area: link1;
+    align-self: center;
+    justify-self: center;
+    margin: 1px 3px;
+font-size: 30px;
+color: #f9bc60; 
+background-color: #3f3e3d
 }
-.footer{
-    display:flex;
-    flex-direction: column;
-align-items: center;}
-.footerbrand {margin-top: 2px;
-margin-bottom: 2px;}
+.link22 {grid-area: link2;
+    align-self: center;
+    justify-self: center;
+    margin: 1px 3px;
+    font-size: 30px;
+    color: #f9bc60; 
+    background-color: #3f3e3d
+}
+.link23 { grid-area: link3;
+    align-self: center;
+    justify-self: center;
+    margin: 1px 3px;
+    font-size: 30px;
+    color: #f9bc60; 
+    background-color: #3f3e3d
+}
+.link24 { grid-area: link4;
+    align-self: center;
+    justify-self: center;
+    margin: 1px 3px;
+    font-size: 30px;
+    color: #f9bc60; 
+    background-color: #3f3e3d
+}
+    .footer {display: inline;
+    align-items: center;
+justify-content: center;}
