--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {padding: 0;
     grid-template-columns:600px 600px 700px;
     grid-template-rows:110px;
     border: 2px solid #ffedbc;
-    background-color: #ffffff;
+    background-color: #ad9b90;
 position: fixed;}
 
 
