--- a/css/courses.css
+++ b/css/courses.css
@@ -12,13 +12,33 @@ p {
   font-size: 20px;
 }
 
+header {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #ffedbc;
+  background-color: #ad9b90;
+  position: fixed;
+  padding-right: 100%;
+}
+
+a {
+  color: #ffedbc;
+  font-size: 30px;
+}
+
 .courses1 {
+  padding-top: 100px;
   display: grid;
   grid-template-columns: 500px 500px 500px;
   grid-template-rows: 500px 500px;
   grid-gap: 20px;
   justify-content: center;
   align-content: space-evenly;
+  background-color: rgba(82, 60, 42, 0.55);
+}
+
+div {
+  border: 2px #ffd5bc solid;
 }
 
 h1 {
@@ -28,17 +48,17 @@ h1 {
 
 .pictures {
   display: grid;
-  grid-template-columns: 500px 500px 500px 500px;
-  align-items: center;
+  grid-template-columns: 500px 500px 500px;
+  justify-content: space-evenly;
 }
 
 .imgcourses {
-  width: 500px;
+  width: 420px;
 }
 
 .enrolmentsection {
   display: grid;
-  grid-template-rows: 100px 300px;
+  grid-template-rows: 100px 500px;
   align-items: center;
   font-size: 30px;
   background-color: rgba(82, 60, 42, 0.55);
