--- a/css/courses.scss
+++ b/css/courses.scss
@@ -1,3 +1,10 @@
+$color-primario: rgba(82, 60, 42);
+$bordes: 2px solid #ffedbc;
+$color-fondo: #ad9b90;
+$color-texto: #ffedbc;
+
+
+
 body {
     padding: 0;
     margin: 0;
