--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,9 @@ padding: 1px 20px;
 margin: 1px 3px;
 font-size: 30px;
 color: #f9bc60; 
-background-color: #3f3e3d;
 }
 
-.link1:hover {background-color: #0a0a0a;}
+.link1:hover {background-color: #9c4600;}
 
 
 .section2{
