--- a/css/courses.scss
+++ b/css/courses.scss
@@ -26,7 +26,7 @@ body {
   position: fixed;
   padding-right: 100%;}
 
-  a {color: #ffedbc;
+  .homea {color: #ffedbc;
     font-size: 30px;}
 
   .courses1 {
